# Series-parallel_graph

./: README.md  containers_only.cpp  main.cpp
implementaition/: CMakeLists.txt  README.md
implementaition/SPGraph/: SPException.h  SPGraph.h  SPiterator.h
implementaition/shapes/: Circle.cpp  Circle.h  Helix.h  Text.cpp  TextInEllipse.cpp
qt_visulization/: README.md  SPGraph_qt.pro  colorPicker.cpp  colorPicker.h  custTreeItem.h  drawWidget.cpp  drawWidget.h  mainwindow.cpp  mainwindow.h  newGraphDialog.cpp  newGraphDialog.h  nodeSelWidget.cpp  nodeSelWidget.h  qhelix.cpp  qhelix.h  spgraph_.cpp  spgraph_.h  spgraph_gr.cpp  spgraph_gr.h
qt_visulization/SPGraph/: SPException.h  SPGraph.h
qt_visulization/shapes/: Circle.h  Ellipse.cpp  Helix.cpp  Helix.h  Shape.cpp  Shape.h  Text.h  TextInEllipse.h
shapes/: Ellipse.h  Shape.cpp  Shape.h  Text.h  TextInEllipse.h
